Added DB Domain structure very first implementation.

--- a/EfDemo.Domain/EfDemo.Domain.csproj
+++ b/EfDemo.Domain/EfDemo.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EfDemo.SharedKernel\EfDemo.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
