--- a/EfDemo.Domain/EfDemo.Domain.csproj
+++ b/EfDemo.Domain/EfDemo.Domain.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\EfDemo.SharedKernel\EfDemo.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
 </Project>
