Refactoring of migrations to use infrastructure project instead of Domain.

--- a/EfDemo.Infrastructure/EfDemo.Infrastructure.csproj
+++ b/EfDemo.Infrastructure/EfDemo.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EfDemo.Domain\EfDemo.Domain.csproj" />
+    <ProjectReference Include="..\EfDemo.SharedKernel\EfDemo.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
