--- a/EfDemo.Api/appsettings.json
+++ b/EfDemo.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EfDemoDbConnection": "Server = (localdb)\\MSSQLLocalDB; Initial Catalog = EfDemoDb;"
+  }
 }
