--- a/EfDemo.Domain/EfDemo.Domain.csproj
+++ b/EfDemo.Domain/EfDemo.Domain.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.12.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="System.Formats.Asn1" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EfDemo.SharedKernel\EfDemo.SharedKernel.csproj" />
   </ItemGroup>
 
