Added infrastructure layer for SQLite.

--- a/EfDemo.Api/EfDemo.Api.csproj
+++ b/EfDemo.Api/EfDemo.Api.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EfDemo.Domain\EfDemo.Domain.csproj" />
+    <ProjectReference Include="..\EfDemo.Infrastructure.SqLite\EfDemo.Infrastructure.SqLite.csproj" />
     <ProjectReference Include="..\EfDemo.Infrastructure\EfDemo.Infrastructure.csproj" />
   </ItemGroup>
 
