--- a/EfDemo.Api/appsettings.json
+++ b/EfDemo.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EfDemoDbConnection": "Server = (localdb)\\MSSQLLocalDB; Initial Catalog = EfDemoDb;"
+    //"EfDemoDbConnection": "Server = (localdb)\\MSSQLLocalDB; Initial Catalog = EfDemoDb;",
+    "EfDemoDbConnection": "Data Source = EfDemoDb.db"
   }
 }
