appsettings.Development.json removed from git repo.

--- a/EfDemo.Api/appsettings.json
+++ b/EfDemo.Api/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    //"EfDemoDbConnection": "Server = (localdb)\\MSSQLLocalDB; Initial Catalog = EfDemoDb;",
-    "EfDemoDbConnection": "Data Source = EfDemoDb.db"
-  }
+  "AllowedHosts": "*"
 }
